# LSTM

./: CMakeLists.txt  Fixe_Point.cpp  Fixe_Point.h  Fixed_Lstm.cpp  Fixed_Lstm.h  Fixed_Sigmoid.cpp  Fixed_Sigmoid.h  Fixed_main.cpp  lstm.cpp  lstm.h  main.cpp  sigmoid.cpp  sigmoid.h  template_utils.h  test_data.txt
